@@ -19,10 +19,14 @@ UNRELEASED CHANGES
 
     * SFTP can walk up to the root path without index errors. (Robert Collins)
 
+    * Fix bugs in running bzr with 'python -O'.  (Martin Pool)
+
   TESTING:
 
     * Fix selftest asking for passwords when there are no SFTP keys.  
       (Robey Pointer, Jelmer Vernooij) 
+
+    * Fix selftest run with 'python -O'.  (Martin Pool)
 
   INTERNALS:
 
